--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav class="navbar__menu">
       <!-- Navigation starts as empty UL that will be populated with JS -->
         <ul class="menu_links" id="navbar__list">
-          <li id="section1_li"><a href="#">Section 1</a></li>
+          <!-- <li id="section1_li" ><a href="#" id="sec1_link">Section 1</a></li>
           <li id="section2_li"><a href="#">Section 2</a></li>
           <li id="section3_li"><a href="#">Section 3</a></li>
-          <li id="section4_li"><a href="#">Section 4</a></li>
+          <li id="section4_li"><a href="#">Section 4</a></li> -->
         </ul>
       
     </nav>
