--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Manipulating the DOM</title>
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
+  <!-- font awsome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
   <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -69,6 +71,10 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
+
+  <a class="top-link" href="#top">
+    <i class="fas fa-arrow-up"></i>
+  </a>
 
   <script type="text/javascript" src="js/app.js"></script>
 
